# sponge

./: LICENSE  README.md  _config.yml  index.md
_sass/color_schemes/: theme.scss
cast_bellows/: index.md
designs/: index.md
designs/modular/: electronics.md  instructions.md  main.md
designs/semi_modular/: electronics.md  instructions.md  main.md
pinn/: index.md
pinn/software/: init.m  postprocess.m  sync.sh  test_bench.mdl
pinn/software/catkin_ws/src/sponge_mpc/: CMakeLists.txt  package.xml
pinn/software/catkin_ws/src/sponge_mpc/code_gen/: .gitignore
pinn/software/catkin_ws/src/sponge_mpc/srv/: mpc_step.srv
pinn/software/lib/: slave_el3102.m  test_bench_lib.mdl
pinn/software/pinn_training/: PINN_helper.py  PINN_main.py  PINN_physics.py
pinn/software/ros_rt_interface/: generate_block.m
pinn_mpc/: index.md
pinn_mpc/software/: .gitignore  build.sh  build_dep_simulink.sh  init.m  postprocess.m  test_bench.mdl
pinn_mpc/software/catkin_ws/: .gitignore
pinn_mpc/software/lib/: TP1_DiffEq.m
pinn_mpc/software/ros_rt_interface/: Makefile  pcu_ros_load_buses.m
rnn_mpc/: index.md
rnn_mpc/software/: build.m  init.m  sync.sh  test_bench.mdl
rnn_mpc/software/functions/: fcn_GRU_n_layer.m  fcn_MinMax.m  fcn_Transfer2Double.m  fcn_generateRampTrajectories.m  fcn_load_yaml_params.m  fcn_mat2yaml.m
rnn_mpc/software/model/: GRU_params.mat  GRU_weights.mat  checkpoint.pt  config.txt
rnn_mpc/software/neural networks/: NN_fcn.py
rnn_mpc/software/rnn_training/: NN_main.py
test_bench/: index.md
test_bench/software/: .gitignore  README.md  build.sh  build_dep_simulink.sh  init.m  postprocess.m  sync.sh  test_bench_sponge.mdl  test_bench_sponge_sfun.mexa64
test_bench/software/lib/: slave_el3102.m  slave_i2c.m  test_bench_lib.mdl
(+82 files in other folders)
