<?xml version="1.0"?>
<package>
    <name>sponge_mpc</name>
    <version>1.0.0</version>
    <description>MPC of SPONGE with CASADI</description>


    <maintainer email="tim-lukas.habich@imes.uni-hannover.de">user</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>casadi</build_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>casadi</run_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roslib</build_depend> 
    <run_depend>roslib</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>std_msgs</run_depend>
    
    <export>
    </export>
</package>

